# Gawain

./: .clang-tidy  AAQCLdlUmzBupOxMYaqq.txt  AAlctdmibrfVPIFKWHBf.txt  AAmAiSdHqaUWaImJjCOw.txt  ABHvGqEviKeGuDdtkyEm.txt  ABInQTEbeRpNvHLxrSgC.txt  ABXeacmsCGWAzIVZKZCQ.txt  ABismdMReGrfyNSNaBRz.txt  ACDdLIoMrtjcSzAFKtwN.txt  ACaCjxkroBPLWHYOfnKE.txt  AChDqbpbhFroJtNwlLoB.txt  ACjvulVELszlGSRwkJFP.txt  ACmfbyxviYPKaJIxoJMW.txt  ACrnfDJvmzyOdnjoFKfd.txt  ACyprTbjlWOgPrGbZWpR.txt  ADdsFLUwpKmvpFYTSqNY.txt  ADqJNmPHmhjzBBLUvalX.txt  ADvBNOSHWsPtqbiYHBmA.txt  AEITmafmiRXGJKYSWhAn.txt  AEJmivomXzpOkHGlLQEZ.txt  AEfSDsdowHIMcYjfQVhl.txt  AFNxcwEpGNlJtzhKPZOW.txt  AFrkGlKZHDzHuFPvJMTr.txt  AGFZNWyoaICcRQNniRjC.txt  AGHfEIYUTddlcBooopiX.txt  AGWsCkrSfJugmeiuoEAY.txt  AGflRHSyRjHhaeAiPLso.txt  AGpuUNVktHUsoLMClyja.txt  AHCqRIzanFsbCWlJkuGZ.txt  AHDvEqYRwVAwKqUeGvJl.txt  AICZmYwrICnWAzDAdvii.txt  AIEDMLNjswnIylkfoRgd.txt  AIVcYOEdoGgTyzikoMpm.txt  AIVewycTMVkzLpnDtrbF.txt  AIeXhszvKJAGHEJtpgpI.txt  AIpSFxaCmJvDayyVLdFM.txt  AJDFqOxgBXhvLwKyQscc.txt  AJEcxinbmSUUTLQsknEp.txt  AKABYKvEWmuWnNpOKRHp.txt  AKbTsDikUaPaKsDWQYIS.txt  (+11045 more)
include/: Gawain.hpp
include/Gawain/API/Adaptor/: Adaptor.hpp
include/Gawain/API/Common/: Common.hpp  StockPacket.hpp
include/Gawain/API/Strategy/: Strategy.hpp
include/Gawain/API/StreamData/: StreamHelper.hpp
src/: Common.cpp  StockPacket.cpp
